Compiler/test_inputs/invalid/12_control_flow_not_supported.mt
@triton.jit
def control(x): {
  if (x) { y = 1; }
}
